2010-03-07  Nicola  <nicola.pero@meta-innovation.com>

	* GNUmakefile (SUBPROJECTS): Do not compile MyGL by default as not
	everyone has OpenGL.

2009-05-20  Fred Kiefer <FredKiefer@gmx.de>

	* ExampleTheme: New directory with one example theme
	by Fred Morcos <fred.morcos@gmail.com>

2009-01-07  Fred Kiefer <FredKiefer@gmx.de>

	* ToolbarExample/SecondWindowOwner.m (-awakeFromNib): Adopt to
	changes in NSToolbar. Now the toolbar retains the view.

2009-01-01  Fred Kiefer <FredKiefer@gmx.de>

	* GSTest/NSAnimation-test/AnimationView.m: Correct line endings.
	* ToolbarExample: Adopt to changes in NSToolbar and the removal of
	GSToolbar.

2007-05-24 Adam Fedor <fedor@gnu.org>

	* Add MyGL, by Banlu Kemiyatorn

2007-04-12 Xavier Glattard <xavier.glattard@online.fr>

    * GSTest/NSAnimation-test : Follow changes in NSAnimation class, run threaded
    * GSTest/NSViewAnimation-test : run threaded

2007-04-05 Xavier Glattard <xavier.glattard@online.fr>

    * GSTest/NSAnimation-test : New test
    * GSTest/NSViewAnimation-test : New test

2006-09-08 Adam Fedor <fedor@gnu.org>

	* Remove GPuzzle - more up-to-date at Marko's site.

2005-01-13 17:38  Alexander Malmberg  <alexander@malmberg.org>

        * GNUmakefile (SUBPROJECTS): Add ExampleService. Partially fixes
	bug #8161.

2004-11-11  Adam Fedor  <fedor@gnu.org>

	* Classes/NSImage/nsimage.m: Create menu before starting loop
	(patch from Patrick Middleton, Patch #3500).

2004-09-28  Fred Kiefer <FredKiefer@gmx.de>

	* Classes/NSImage/nsimage.m: Use rand() instead of random() as
	this is more portable.
	* Ink/Document.m ([Document -makeWindow]): Set text view to import
	graphics and added vertical ruler.
	* Old/nscombobox.m: Added one more combobox in window.
	
	
2004-09-28  Adam Fedor  <fedor@gnu.org>

	* Classes/NSPanelTest/NSPanelTest.m: Make NSPanelTest an application 
	delegate. Reindent. Fix compiler warnings.
	* Classes/NSPanelTest/GNUmakefile: Don't make NSPanelTest the app class.